--- a/css/styles.css
+++ b/css/styles.css
@@ -343,3 +343,156 @@ h1, h2, h3, h4, h5, h6, p, ul {
   margin: 0;
   padding: 0;
 }
+
+.title {
+  font-size: 40px;
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+
+.main-header {
+  margin-bottom: 30px;
+  padding: 20px;
+}
+
+.main-header .container {
+  padding: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main-header .container nav a {
+  display: inline-block;
+  margin-left: 20px;
+  color: black;
+  font-size: 18px;
+}
+
+.main-header .container nav input[type="text"] {
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 10px 20px;
+  margin-left: 20px;
+  border-radius: 5px;
+}
+
+.main-image {
+  width: 100%;
+  padding-top: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  border-radius: 4px;
+  background-size: cover;
+  background-position: center;
+  margin: 0 auto;
+}
+
+.main-name {
+  font-size: 1.5em;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.main-price {
+  font-size: 2.5em;
+  display: inline-block;
+  margin: 0px 20px 20px;
+  cursor: pointer;
+  display: block;
+}
+
+.main-description {
+  font-size: 1.1em;
+  margin-bottom: 20px;
+  line-height: 1.5;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.button-wrapper {
+  text-align: center;
+}
+
+.button-wrapper a {
+  margin-left: 15px;
+}
+
+.cover-image {
+  width: 100px;
+  height: 100px;
+  background-color: pink;
+  background-size: cover;
+  background-position: center;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 0  auto;
+  cursor: pointer;
+}
+
+.table-text {
+  line-height: 100px;
+}
+
+.option-unit {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 100px 0px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.option-unit i {
+  font-size: 80px;
+  margin-bottom: 15px;
+}
+
+.option-unit .text {
+  font-size: 30px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.item-unit {
+  padding: 20px;
+  display: flex;
+  margin-bottom: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.item-unit .item-image {
+  width: 200px;
+  height: 200px;
+  margin-right: 30px;
+  background-size: cover;
+  background-position: center;
+}
+
+.item-unit .content {
+  flex: 1;
+}
+
+.item-unit .content .item-name {
+  display: inline-block;
+  font-size: 1.3em;
+  margin-bottom: 15px;
+}
+
+.item-unit .content .item-price {
+  font-size: 2em;
+  font-weight: 700;
+}
+
+@media (max-width: 540px) {
+  .main-header .container {
+    display: block;
+  }
+  .main-header .container .logo {
+    margin-bottom: 10px;
+  }
+  .main-header .container nav a {
+    margin-left: 0px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    display: block;
+  }
+}
