--- a/css/styles.sass
+++ b/css/styles.sass
@@ -13,3 +13,137 @@ html,  body
 h1, h2, h3, h4, h5, h6, p, ul
   margin: 0
   padding: 0
+
+.title
+  font:
+    size: 40px
+    weight: 300
+  margin-bottom: 20px
+
+
+//header styling
+
+
+
+.main-header
+  margin-bottom: 30px
+  padding: 20px
+
+.main-header .container
+  padding:  0px
+  display: flex
+  align-items: center
+  justify-content: space-between
+  nav a
+    display: inline-block
+    margin-left: 20px
+    color: black
+    font:
+      size: 18px
+  nav input[type="text"]
+    outline: none
+    border: 1px solid rgba(black, 0.2)
+    padding: 10px 20px
+    margin-left: 20px
+    border-radius: 5px
+
+.main-image
+  width: 100%
+  padding-top: 100%
+  border: 1px solid rgba(black, 0.2)
+  cursor: pointer
+  border-radius: 4px
+  background:
+    size: cover
+    position: center
+  margin : 0 auto
+.main-name
+  font:
+    size: 1.5em
+    weight: 700
+  margin-bottom: 15px
+.main-price
+  font:
+    size: 2.5em
+  display: inline-block
+  margin: 0px 20px 20px
+  cursor: pointer
+  display: block
+
+.main-description
+  font-size: 1.1em
+  margin-bottom: 20px
+  line-height: 1.5
+  color: rgba(black, 0.7)
+
+.button-wrapper
+  text-align: center
+  a
+    margin-left: 15px
+
+.cover-image
+  width: 100px
+  height: 100px
+  background:
+    color: pink
+    size: cover
+    position: center
+  border: 1px solid rgba(black, 0.2)
+  margin: 0  auto
+  cursor: pointer
+
+.table-text
+  line-height: 100px
+
+.option-unit
+  border: 1px solid rgba(black, 0.2)
+  text-align: center
+  padding: 100px 0px
+  border-radius: 10px
+  cursor: pointer
+  i
+    font-size: 80px
+    margin-bottom: 15px
+  .text
+    font-size: 30px
+    color: rgba(black, 0.4)
+
+
+
+.item-unit
+  padding: 20px
+  display: flex
+  margin-bottom: 20px
+  border: 1px solid rgba(black, 0.2)
+  border-radius: 10px
+  cursor: pointer
+  .item-image
+    width:  200px
+    height: 200px
+    margin-right: 30px
+    background:
+      size: cover
+      position: center
+  .content
+    flex: 1
+    .item-name
+      display: inline-block
+      font:
+        size: 1.3em
+      margin-bottom: 15px
+    .item-price
+      font:
+        size: 2em
+        weight: 700
+
+
+@media(max-width: 540px)
+  .main-header .container
+    display: block
+    .logo
+      margin-bottom: 10px
+    nav a
+      margin-left: 0px
+      margin-right: 20px
+      margin-bottom: 10px
+      display: block
