--- a/css/styles.sass
+++ b/css/styles.sass
@@ -22,9 +22,15 @@ h1, h2, h3, h4, h5, h6, p, ul
   margin-bottom: 20px
 
 
-//header styling
-
-
+.profile-face
+  width: 200px
+  height: 200px
+  background:
+    size: cover
+    position: center
+  margin: 0 auto 20px
+  cursor: pointer
+ 
 
 .main-header
   margin-bottom: 30px
